--- a/libir/Makefile.am
+++ b/libir/Makefile.am
@@ -3,4 +3,4 @@ noinst_LTLIBRARIES = libir.la
 AM_CPPFLAGS = -I$(srcdir)/include
 
 noinst_HEADERS = include/ir.h
-libir_la_SOURCES = ir.c
+libir_la_SOURCES = ir.c dump_ir.c
