--- a/guest-i8080/Makefile.am
+++ b/guest-i8080/Makefile.am
@@ -3,7 +3,7 @@ bin_PROGRAMS = test
 
 AM_CPPFLAGS = -I$(srcdir)/include -I$(top_srcdir)/include -I$(top_srcdir)/libir/include
 
-noinst_HEADERS = include/i8080.h
+noinst_HEADERS = include/i8080.h include/guest.h
 libguest_i8080_la_SOURCES = parse.c
 
 test_SOURCES = test.c
