Add libtool-related things
Signed-off-by: Dmitry Eremin-Solenikov <dbaryshkov@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,8 @@
 SUBDIRS = libir guest-i8080
 noinst_HEADERS = include/sys.h
+ACLOCAL_AMFLAGS = -I m4
+
+LIBTOOL_DEPS = @LIBTOOL_DEPS@
+libtool: $(LIBTOOL_DEPS)
+	$(SHELL) ./config.status --recheck
+
