--- a/configure.ac
+++ b/configure.ac
@@ -38,7 +38,7 @@ fi
 # Checks for libraries.
 
 # Checks for header files.
-AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h unistd.h])
+AC_CHECK_HEADERS([fcntl.h inttypes.h libintl.h stddef.h stdint.h stdlib.h unistd.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_INLINE
@@ -46,10 +46,15 @@ AC_TYPE_UINT8_T
 AC_TYPE_UINT16_T
 AC_TYPE_UINT32_T
 AC_TYPE_UINT64_T
+AC_TYPE_INT8_T
+AC_TYPE_INT16_T
+AC_TYPE_INT32_T
+AC_TYPE_SIZE_T
 
 # Checks for library functions.
 AC_FUNC_MMAP
 AC_FUNC_REALLOC
+AC_CHECK_FUNCS([memset])
 
 AC_CONFIG_FILES([Makefile
 		 libmdesc/Makefile
